Vault added in swagger json and yaml
