# x/vault/keeper/query_server.go
@@ -26,6 +26,72 @@ func NewQueryServiceServer(k Keeper) types.QueryServiceServer {
 	}
 }
 
+func (q *queryServer) QueryAllVaults(c context.Context, req *types.QueryAllVaultsRequest) (*types.QueryAllVaultsResponse, error) {
+	if req == nil {
+		return nil, status.Error(codes.InvalidArgument, "request cannot be empty")
+	}
+
+	var (
+		items []types.VaultInfo
+		ctx   = sdk.UnwrapSDKContext(c)
+	)
+
+	pagination, err := query.FilteredPaginate(
+		prefix.NewStore(q.Store(ctx), types.VaultKeyPrefix),
+		req.Pagination,
+		func(_, value []byte, accumulate bool) (bool, error) {
+			var item types.Vault
+			if err := q.cdc.Unmarshal(value, &item); err != nil {
+				return false, err
+			}
+
+			pair, found := q.GetPair(ctx, item.PairID)
+			if !found {
+				return false, status.Errorf(codes.NotFound, "pair does not exist for id %d", item.PairID)
+			}
+
+			assetIn, found := q.GetAsset(ctx, pair.AssetIn)
+			if !found {
+				return false, status.Errorf(codes.NotFound, "asset does not exist for id %d", pair.AssetIn)
+			}
+
+			assetOut, found := q.GetAsset(ctx, pair.AssetOut)
+			if !found {
+				return false, status.Errorf(codes.NotFound, "asset does not exist for id %d", pair.AssetOut)
+			}
+
+			collateralizationRatio, err := q.CalculateCollaterlizationRatio(ctx, item.AmountIn, assetIn, item.AmountOut, assetOut)
+			if err != nil {
+				return false, err
+			}
+
+			vaultInfo := types.VaultInfo{
+				Id:                     item.ID,
+				PairID:                 item.PairID,
+				Owner:                  item.Owner,
+				Collateral:             sdk.NewCoin(assetIn.Denom, item.AmountIn),
+				Debt:                   sdk.NewCoin(assetOut.Denom, item.AmountOut),
+				CollateralizationRatio: collateralizationRatio,
+			}
+
+			if accumulate {
+				items = append(items, vaultInfo)
+			}
+
+			return true, nil
+		},
+	)
+
+	if err != nil {
+		return nil, status.Error(codes.Internal, err.Error())
+	}
+
+	return &types.QueryAllVaultsResponse{
+		VaultsInfo: items,
+		Pagination: pagination,
+	}, nil
+}
+
 func (q *queryServer) QueryVaults(c context.Context, req *types.QueryVaultsRequest) (*types.QueryVaultsResponse, error) {
 	if req == nil {
 		return nil, status.Error(codes.InvalidArgument, "request cannot be empty")
@@ -66,11 +132,11 @@ func (q *queryServer) QueryVaults(c context.Context, req *types.QueryVaultsReque
 			}
 
 			vaultInfo := types.VaultInfo{
-				Id:                    item.ID,
-				PairID:                item.PairID,
-				Owner:                 item.Owner,
-				Collateral:            sdk.NewCoin(assetIn.Denom, item.AmountIn),
-				Debt:                  sdk.NewCoin(assetOut.Denom, item.AmountOut),
+				Id:                     item.ID,
+				PairID:                 item.PairID,
+				Owner:                  item.Owner,
+				Collateral:             sdk.NewCoin(assetIn.Denom, item.AmountIn),
+				Debt:                   sdk.NewCoin(assetOut.Denom, item.AmountOut),
 				CollateralizationRatio: collateralizationRatio,
 			}
 
@@ -87,7 +153,7 @@ func (q *queryServer) QueryVaults(c context.Context, req *types.QueryVaultsReque
 	}
 
 	return &types.QueryVaultsResponse{
-		VaultsInfo:   items,
+		VaultsInfo: items,
 		Pagination: pagination,
 	}, nil
 }
@@ -127,11 +193,11 @@ func (q *queryServer) QueryVault(c context.Context, req *types.QueryVaultRequest
 	}
 	return &types.QueryVaultResponse{
 		VaultInfo: types.VaultInfo{
-			Id:                    vault.ID,
-			PairID:                vault.PairID,
-			Owner:                 vault.Owner,
-			Collateral:            sdk.NewCoin(assetIn.Denom, vault.AmountIn),
-			Debt:                  sdk.NewCoin(assetOut.Denom, vault.AmountOut),
+			Id:                     vault.ID,
+			PairID:                 vault.PairID,
+			Owner:                  vault.Owner,
+			Collateral:             sdk.NewCoin(assetIn.Denom, vault.AmountIn),
+			Debt:                   sdk.NewCoin(assetOut.Denom, vault.AmountOut),
 			CollateralizationRatio: collateralizationRatio,
 		},
 	}, nil
